--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     buildTypes {
         debug {
-            resValue "string", "youtube_api_key", YT_API_KEY
+            resValue "string", "youtube_api_key", KEYS.getProperty("YT_API_KEY")
         }
 
         release {
@@ -27,7 +27,7 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
-            resValue "string", "youtube_api_key", YT_API_KEY
+            resValue "string", "youtube_api_key", KEYS.getProperty("YT_API_KEY")
         }
     }
 
