--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,7 +136,7 @@ dependencies {
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.6'
-    implementation 'com.google.android.gms:play-services-ads:19.1.0'
+//    implementation 'com.google.android.gms:play-services-ads:19.1.0'
 
     // Custom Tabs
     implementation "saschpe.android:customtabs:$saschpeCustomTabs"
