--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,8 +134,8 @@ dependencies {
     implementation 'com.chibatching.kotpref:kotpref:2.10.0'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.4.0'
-    implementation 'com.google.firebase:firebase-messaging:20.1.6'
+//    implementation 'com.google.firebase:firebase-analytics:17.4.0'
+//    implementation 'com.google.firebase:firebase-messaging:20.1.6'
 
     // Custom Tabs
     implementation "saschpe.android:customtabs:$saschpeCustomTabs"
