--- a/music_common/build.gradle
+++ b/music_common/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion COMPILE_SDK_VERSION
@@ -49,13 +50,13 @@ android {
     compileOptions {
         targetCompatibility = '1.8'
     }
-
 }
 
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutinesVersion"
 
     api "androidx.media:media:$androidx_media_version"
 
@@ -63,7 +64,7 @@ dependencies {
 
     // Declare the dependency for the Cloud Firestore library
     // When NOT using the BoM, you must specify versions in Firebase library dependencies
-//    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
 
     // ExoPlayer dependencies
 
