--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,14 +62,14 @@
         <!-- Enable instant app support -->
         <dist:module dist:instant="true" />
 
-        <!-- Declare that UAMP supports Android Auto. -->
-        <meta-data
-            android:name="com.google.android.gms.car.application"
-            android:resource="@xml/automotive_app_desc" />
+<!--        &lt;!&ndash; Declare that UAMP supports Android Auto. &ndash;&gt;-->
+<!--        <meta-data-->
+<!--            android:name="com.google.android.gms.car.application"-->
+<!--            android:resource="@xml/automotive_app_desc" />-->
 
         <!-- Declare that UAMP supports Cast. -->
         <meta-data android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
-            android:value="com.example.android.uamp.cast.UampCastOptionsProvider"/>
+            android:value="tsfat.yeshivathahesder.channel.uamp.cast.UampCastOptionsProvider"/>
 
 
         <!--
