--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
 
     ext {
         KEYS = keys
-        VERSION_NAME = "v0.0.2"
-        VERSION_CODE = 2
+        VERSION_NAME = "v1.0.0a"
+        VERSION_CODE = 3
 
         MIN_SDK_VERSION = 21
         COMPILE_SDK_VERSION = 30
