--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
     ext {
         KEYS = keys
-        VERSION_NAME = "v1.0.0a"
+        VERSION_NAME = "v0.0.3"
         VERSION_CODE = 3
 
         MIN_SDK_VERSION = 21
