--- a/music_common/build.gradle
+++ b/music_common/build.gradle
@@ -24,8 +24,8 @@ android {
     compileSdkVersion COMPILE_SDK_VERSION
 
     defaultConfig {
-        versionCode 1
-        versionName "1.0"
+        versionCode VERSION_CODE
+        versionName VERSION_NAME
 
         minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
