--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="tsfat.yeshivathahesder.channel">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -42,7 +42,8 @@
         <activity
             android:name=".activity.VideoPlayerActivity"
             android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:supportsPictureInPicture="true" />
 
         <meta-data
             android:name="preloaded_fonts"
@@ -62,14 +63,15 @@
         <!-- Enable instant app support -->
         <dist:module dist:instant="true" />
 
-<!--        &lt;!&ndash; Declare that UAMP supports Android Auto. &ndash;&gt;-->
-<!--        <meta-data-->
-<!--            android:name="com.google.android.gms.car.application"-->
-<!--            android:resource="@xml/automotive_app_desc" />-->
+        <!--        &lt;!&ndash; Declare that UAMP supports Android Auto. &ndash;&gt;-->
+        <!--        <meta-data-->
+        <!--            android:name="com.google.android.gms.car.application"-->
+        <!--            android:resource="@xml/automotive_app_desc" />-->
 
         <!-- Declare that UAMP supports Cast. -->
-        <meta-data android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
-            android:value="tsfat.yeshivathahesder.channel.uamp.cast.UampCastOptionsProvider"/>
+        <meta-data
+            android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
+            android:value="tsfat.yeshivathahesder.channel.uamp.cast.UampCastOptionsProvider" />
 
 
         <!--
