--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
+    implementation 'androidx.preference:preference:1.1.1'
     kapt "androidx.room:room-compiler:$roomVersion"
 
     // Material theme
@@ -158,6 +159,8 @@ dependencies {
     // Glide dependencies
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
+
+    implementation "androidx.preference:preference-ktx:1.1.1"
 
 
     // Modules
