--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_yhtsfat"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_yhtsfat_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
