--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
     ext {
         KEYS = keys
-        VERSION_NAME = "v0.0.5"
+        VERSION_NAME = "v0.0.5-b1"
         VERSION_CODE = 5
 
         MIN_SDK_VERSION = 21
