--- a/music_common/build.gradle
+++ b/music_common/build.gradle
@@ -33,18 +33,16 @@ android {
         testOptions.unitTests.includeAndroidResources = true
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
-//        resValue "string", "drive_api_key", KEYS.DRIVE_API_KEY
+        resValue "string", "firebase_rest_api_key", KEYS.FIREBASE_API_KEY
+        resValue "string", "drive_api_key", "Empty"
     }
 
     buildTypes {
         debug {
-            resValue "string", "drive_api_key", KEYS.DRIVE_API_KEY
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
-            resValue "string", "drive_api_key", KEYS.DRIVE_API_KEY
         }
     }
     compileOptions {
