--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     packagingOptions {
-        exclude 'META-INF/core_release.kotlin_module'
+        resources {
+            excludes += ['META-INF/core_release.kotlin_module']
+        }
     }
+
 
     configurations {
 //        implementation.exclude module: 'proto-google-common-protos'
@@ -71,15 +73,14 @@ dependencies {
 //    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutinesVersion"
 
     // Koin
-    implementation "org.koin:koin-android:$koinVersion"
-    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
+    implementation "io.insert-koin:koin-android:$koinVersion"
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.core:core-ktx:1.3.0-rc01'
+    implementation 'androidx.core:core-ktx:1.9.0-alpha01'
     implementation "androidx.constraintlayout:constraintlayout:$clVersion"
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     // Architecture Components
     implementation "androidx.lifecycle:lifecycle-extensions:$archVersion"
@@ -90,7 +91,7 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
     kapt "androidx.room:room-compiler:$roomVersion"
 
     // Material theme
@@ -120,13 +121,13 @@ dependencies {
     implementation "io.coil-kt:coil:0.10.0"
 
     // Paging
-    implementation "androidx.paging:paging-runtime:2.1.2"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
 
     // TimeAgo
     implementation 'com.github.marlonlom:timeago:4.0.1'
 
     // YouTube Player
-    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.0.1'
 
     // Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -154,9 +155,11 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
-    implementation "androidx.preference:preference-ktx:1.1.1"
-
     // Modules
     implementation project(':core')
     implementation project(':music_common')
+}
+repositories {
+    mavenCentral()
+    google()
 }
