--- a/build.gradle
+++ b/build.gradle
@@ -15,38 +15,37 @@ buildscript {
 
         archVersion = "2.2.0"
         browserVersion = "1.2.0"
-        clVersion = "2.0.0-beta4"
+        clVersion = "2.1.3"
         circleImageViewVersion = "3.0.0"
-        coroutinesVersion = '1.3.2'
-        fastAdapterVersion = "5.0.0"
+        coroutinesVersion = '1.6.0'
+        fastAdapterVersion = "5.6.0"
         glideVersion = '4.10.0'
-        koinVersion = "2.0.1"
-        kotlinVersion = '1.3.72'
+        koinVersion = "3.1.5"
+        kotlinVersion = '1.6.10'
         lottieVersion = "3.1.0"
         materialDialogVersion = "3.3.0"
-        materialThemeVersion = '1.1.0'
-        navVersion = "2.3.5"
-        roomVersion = "2.2.5"
+        materialThemeVersion = '1.5.0'
+        navVersion = "2.4.1"
+        roomVersion = "2.4.2"
         stfalconVersion = "0.1.0"
         timberVersion = "4.7.1"
-        gsonVersion = '2.8.5'
+        gsonVersion = '2.8.8'
 
-        exoplayer_version = '2.11.5'
-        androidx_media_version = '1.0.1'
+        exoplayer_version = '2.16.0'
+        androidx_media_version = '1.5.0'
         glide_version = '4.11.0'
-        junit_version = '4.13'
-        robolectric_version = '4.2'
-        fragment_version = '1.2.5'
+        junit_version = '4.13.2'
+        robolectric_version = '4.7.3'
+        fragment_version = '1.4.1'
         multidex_version = '1.0.3'
     }
 
     repositories {
         google()
-        jcenter()
-
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
@@ -56,10 +55,10 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
         maven {
             url "https://jitpack.io"
         }
+        mavenCentral()
     }
 }
 
